--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --almost-white: hsl(252, 11%, 91%);
     --almost-black: hsl(248, 15%, 11%);
     --green: hsl(127, 100%, 82%);
+    --checkbox-green: hsl(127, 100%, 72%);
     --red: hsl(0, 91%, 63%);
     --orange: hsl(13, 95%, 66%);
     --yellow: hsl(42, 91%, 68%);
@@ -126,7 +127,8 @@ body {
   place-content: center;
   font-family: var(--ff-primary);
   transition: var(--transtion-300ms);
-  background-color: var(--almost-black);
+  /* background-color: var(--almost-black); */
+  background: linear-gradient(180deg, var(--almost-black) 0%, var(--almost-black) 100%);
 }
 
 /* Title  */
@@ -390,96 +392,71 @@ main {
 
 /* Range Input And Checkbox Input*/
 input[type=range] {
-  height: 25px;
   -webkit-appearance: none;
-  margin: 10px 0;
+  -moz-appearance: none;
+  height: 4px;
   width: 100%;
-  background: transparent;
-}
-input[type=range]:focus {
+  border: none;
   outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 6px;
   cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: var(--green);
-  border-radius: 10px;
-  border: 0px solid #000000;
+  border-radius: 50%;
+  margin-block-start: 1.4rem;
 }
+input[type='range']::-webkit-slider-runnable-track {
+  background: linear-gradient(to right, var(--green), var(--green)), var(--almost-black);
+  background-size: var(--background-size, 0%) 100%;
+  background-repeat: no-repeat;
+  height: 0.5rem;
+  border-radius: 15px;
+}
+/* For Chrome, Safari Browsers */
 input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid transparent;
-  height: 18px;
-  width: 18px;
-  border-radius: 25px;
-  background: white;
-  cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -7px;
-}
-/* input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #2497E3;
-} */
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 5px;
+  height: 20px;
+  width: 20px;
   cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: #2497E3;
-  border-radius: 1px;
-  border: 0px solid #000000;
+  border-radius: 50%;
+  background: var(--green);
+  margin-block-start: -0.5rem;
+  border: 2px solid var(--green);
+  transition: var(--transtion-200ms);
 }
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
-  height: 18px;
-  width: 18px;
-  border-radius: 25px;
-  background: #A1D0FF;
-  cursor: pointer;
-}
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 5px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: #2497E3;
-  border: 0px solid #000000;
-  border-radius: 2px;
-  box-shadow: 0px 0px 0px #000000;
-}
-input[type=range]::-ms-fill-upper {
-  background: #2497E3;
-  border: 0px solid #000000;
-  border-radius: 2px;
-  box-shadow: 0px 0px 0px #000000;
-}
-input[type=range]::-ms-thumb {
-  margin-top: 1px;
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
-  height: 18px;
-  width: 18px;
-  border-radius: 25px;
-  background: #A1D0FF;
-  cursor: pointer;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #2497E3;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #2497E3;
+input[type=range]::-webkit-slider-thumb:hover,
+input[type=range]::-webkit-slider-thumb:active {
+  background-color: var(--almost-black);
+  border: 2px solid var(--checkbox-green);
 }
 
+/* For Mozilla Browser  */
+input[type='range']::-moz-range-track {
+  background-color: var(--almost-black);
+  height: 0.5rem;
+}
+
+input[type='range']::-moz-range-progress {
+  background-color: var(--green);
+  height: 0.5rem;
+}
+
+input[type='range']::-moz-range-thumb {
+  -moz-appearance: none;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  margin-block-start: -0.5rem;
+  border: 2px solid var(--green);
+  transition: var(--transtion-200ms);
+  background-color: var(--almost-white);
+}
+
+input[type='range']::-moz-range-thumb:hover,
+input[type=range]::-moz-range-thumb:active {
+  background-color: var(--almost-black);
+  border: 2px solid var(--green);
+}
+
+/* Input Checkbox  */
 input[type=checkbox]:checked {
-  accent-color: var(--green);
+  accent-color: var(--checkbox-green);
 } 
